# first-zellij-plugin

./: Cargo.toml  README.md  my.kdl
.github/workflows/: CI.yml
doc/: key-press-flow.md  protobuf.md  wasm.md
doc/Others/: takeaway.md
samples/echo-key/: README.md  my.kdl
samples/echo-key/src/: main.rs
samples/float-pane-sized/: Cargo.toml  README.md
samples/float-pane-sized/src/: main.rs  ui.rs
samples/float-pane-sized/src/ui/: color.rs  panes.rs  tabs.rs  widgets.rs
samples/plugin-worker/: Cargo.toml  README.md  my.kdl
samples/plugin-worker/src/: main.rs
samples/system_info_plugin/: Cargo.toml
samples/system_info_plugin/src/: main.rs  system.rs
samples/system_info_plugin/src/system/: system_event.rs
src/: main.rs
