[package]
name = "system_info_plugin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.29.10"
zellij-tile = "0.38.1"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
